// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css_macro pick css 1`] = `
""use strict";

var _css_a = require("./css_a");
const ButtonStyle = "ButtonStyle-a7b05d02";

// class: GlobalButton
let ButtonStyle2 = "GlobalButton";
var ButtonStyle3 = "ButtonStyle3-8136e774";

// Global style

const obj = {
  y: "styled-b2319bc3"
};
obj.x = "styled-a5e9a065";
function Hi() {
  const ButtonStyle = "ButtonStyle-5c1c3b21";
}"
`;

exports[`css_macro pick css 2`] = `
".ButtonStyle-a7b05d02 {
                color: #000;
            }
.GlobalButton {
                color: #000;
            }
.ButtonStyle3-8136e774 {
                color: #000;
            }

                .Group {
                    flow-children: right;
                    .ButtonStyle-a7b05d02 {
                        flow-children: right;
                    }
                    .GlobalButton {
                        flow-children: right;
                    }
                    .ButtonStyle3-8136e774 {
                        flow-children: right;
                    }
                    .CommonButtonStyle-3e7df59e {
                        flow-children: right;
                    }
                }
            .styled-b2319bc3 {y: 0px;}
.styled-a5e9a065 {
                x: 0px;
            }
.ButtonStyle-5c1c3b21 {
                    color: #000;
                }
"
`;

exports[`css_macro pick css 3`] = `
{
  "css_a.ts": ".CommonButtonStyle-3e7df59e {
    color: #000;
}
",
  "css_macro.test.ts": ".ButtonStyle-a7b05d02 {
                color: #000;
            }
.GlobalButton {
                color: #000;
            }
.ButtonStyle3-8136e774 {
                color: #000;
            }

                .Group {
                    flow-children: right;
                    .ButtonStyle-a7b05d02 {
                        flow-children: right;
                    }
                    .GlobalButton {
                        flow-children: right;
                    }
                    .ButtonStyle3-8136e774 {
                        flow-children: right;
                    }
                    .CommonButtonStyle-3e7df59e {
                        flow-children: right;
                    }
                }
            .styled-b2319bc3 {y: 0px;}
.styled-a5e9a065 {
                x: 0px;
            }
.ButtonStyle-5c1c3b21 {
                    color: #000;
                }
",
}
`;
